integration of devise, add sign in form to header, header and footer moved to partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,44 +7,14 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div role="navigation" class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <%= link_to t(:header_home), root_url, :class => 'navbar-brand' %>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li>
-              <%= link_to t(:header_tracks), :controller => 'tracks', :action => 'index' %>
-            </li>
-            <li>
-              <%= link_to t(:header_about), :controller => 'static_pages', :action => 'about' %>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if !controller.controller_name.eql? 'track_select' %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <%= image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}" %>
-                  <span class="caret"></span>
-                </a>
-                <%= lang_menu %>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <%= render 'layouts/header' %>
+
+    <!--<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>-->
 
     <div class="container">
       <%= yield %>
     </div>
-
-    <div class="navbar navbar-default navbar-static-bottom">
-      <div class="container">
-        <p class="copyright">© 2014 <%=t :footer_owner %></p>
-      </div>
-    </div>
-
+    <%= render 'layouts/footer' %>
   </body>
 </html>
