many many many changes to all

--- a/app/views/events/_rounds_table.html.erb
+++ b/app/views/events/_rounds_table.html.erb
@@ -1,8 +1,10 @@
+<h2>Раунды</h2>
+
 <table class="table table-hover">
   <thead>
   <tr>
-    <th>Дисциплина</th>
     <th>Название</th>
+    <th>Дисциплина</th>
     <th>Действия</th>
   </tr>
   </thead>
@@ -16,3 +18,5 @@
 <button class="btn btn-default" data-toggle="modal" data-target="#newRoundEventModal">
   Добавить раунд
 </button>
+
+<hr>
