--- a/app/views/events/_orgs_table.html.erb
+++ b/app/views/events/_orgs_table.html.erb
@@ -1,3 +1,5 @@
+<h2>Организаторы</h2>
+
 <table class="table table-hover">
   <thead>
   <tr>
@@ -24,6 +26,8 @@
 </table>
 
 <!-- Button trigger modal -->
-<button class="btn btn-default" data-toggle="modal" data-target="#newOrgEventModal">
+<button class="btn btn-default" data-toggle="modal" data-target="#newEventOrgModal">
   Добавить организатора
 </button>
+
+<hr>
