many many many changes to all

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
   <body>
     <%= render 'layouts/header' %>
 
-    <!--<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>-->
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <div class="container">
       <%= yield %>
