--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,31 +2,43 @@
 
 <div class="row">
 
-  <div class="col-md-2 col-xs-2">
-    <img src="/assets/blank_photo.jpg" class="img-responsive img-rounded" alt="Responsive image">
-    <%= link_to 'Редактировать', edit_user_registration_path, :class => "btn btn-info"  %>
+  <div class="col-md-2">
+    <%= image_tag(@user.userpic.url(:medium), :class => "img-responsive img-rounded") %>
+  </div>
+  <div class='page-header col-md-10'>
+    <div class="col-md-11">
+        <h1><%= @user.name %></h1>
+      </div>
+
+      <div class="col-md-1">
+        <% if current_user == @user %>
+          <%= link_to content_tag(:span, nil, :class => 'glyphicon glyphicon-pencil'),
+                    edit_user_registration_path,
+                    :class => "btn btn-default edit"  %>
+        <% end %>
+      </div>
+
   </div>
 
-  <div class="tabbable col-md-9">
-    <div class='page-header'>
-      <h1><%= @user.name %></h1>
-    </div>
+</div>
+
+<div class="row">
+  <div class="col-md-9 col-md-offset-2">
+  <div class="tabbable">
 
     <ul class="nav nav-tabs" id="tabs" data-tabs="tabs">
       <li class="active"><a href="#overview" data-toggle="tab">Информация</a></li>
-      <li><a href="#tracks" data-toggle="tab">Треки пользователя</a></li>
-      <li><a href="#competitions" data-toggle="tab">Участие в соревнованиях</a></li>
+      <li><a href="#tracks" data-toggle="tab">Треки пользователя <span class="badge"><%= @user.tracks.count %></span></a></li>
+      <li><a href="#competitions" data-toggle="tab">Участие в соревнованиях <span class="badge"><%= @user.events.count %></span></a></li>
     </ul>
 
     <div class="tab-content">
       <div class="tab-pane active" id="overview">
 
-        <div class="col-md-9">
-          <p><strong>Страна:</strong> Россия</p>
-          <p><strong>Прыжков всего:</strong> 250</p>
-          <p><strong>из них в вингсьюте:</strong> 150</p>
-          <p><strong>из них за последние 12 мес:</strong> 50</p>
-        </div>
+        <p><strong>Страна:</strong> Россия</p>
+        <p><strong>Прыжков всего:</strong> 250</p>
+        <p><strong>из них в вингсьюте:</strong> 150</p>
+        <p><strong>из них за последние 12 мес:</strong> 50</p>
 
       </div>
 
@@ -35,19 +47,21 @@
         <table class="table table-hover">
           <thead>
             <tr>
-              <th><%=t :ts_t_number %></th>
-              <th><%=t :ts_t_name %></th>
-              <th><%=t :ts_t_elev %></th>
-              <th><%=t :ts_t_pt_cnt %></th>
+              <th>#</th>
+              <th>Вингсьют</th>
+              <th>Локация</th>
+              <th>Комментарий</th>
+              <th>Дата загрузки</th>
             </tr>
           </thead>
           <tbody>
             <% @user.tracks.each do |track| %>
               <tr class='clickableRow' style="cursor: pointer" data-url="<%= show_track_path(:id => track.id) %>">
                 <td class='text-info'><%= track.id %></td>
-                <td class='text-info'></td>
-                <td class='text-info'></td>
-                <td class='text-info'></td>
+                <td class='text-info'><%= track.suit %></td>
+                <td class='text-info'><%= track.location %></td>
+                <td class="text-muted"><%= track.comment %></td>
+                <td class='text-info'><%= track.created_at %></td>
               </tr>
             <% end %>
           </tbody>
@@ -62,5 +76,6 @@
 
       </div>
     </div>
+  </div>
   </div>
 </div>
