--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,8 @@
         <% if user_signed_in? %>
           <li class='dropdown'>
             <a href='#' class='dropdown-toggle' data-toggle='dropdown'>
-              <%= current_user.email %>
-              <span class="glyphicon glyphicon-user"></span>
-              <b class='caret'></b>
+              <%= current_user.name %>
+              <%= image_tag current_user.userpic.url(:thumb), :class => 'img-rounded img-50' %>
             </a>
             <ul class='dropdown-menu'>
               <% if current_user.has_role? :admin %>
