--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,18 @@
   <body>
     <%= render 'layouts/header' %>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-7">
+          <% flash.each do |type, message| %>
+            <div class="alert <%= bootstrap_class_for(type) %> alert-dismissable fade in">
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+              <%= message %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
     <div class="container">
       <%= yield %>
